タイポ修正

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root{
   /* colors */
   --mainColor: #DEBB69;
-  --subClor: #E0D0C1;
+  --subColor: #E0D0C1;
 
   /* fonts */
   --defaultFontSize: 16px;
