--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap');
+
+body {
+  font-family: 'Noto Sans JP', "游ゴシック Medium", YuGothic, YuGothicM, メイリオ, Meiryo, sans-serif;
+}
+
 button {
   background-color: transparent;
   border: none;
@@ -5,4 +11,8 @@ button {
   outline: none;
   padding: 0;
   appearance: none;
+}
+
+a {
+  color:var(--mainColor);
 }
