--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2,6 +2,9 @@
 
 body {
   font-family: 'Noto Sans JP', "游ゴシック Medium", YuGothic, YuGothicM, メイリオ, Meiryo, sans-serif;
+  font-size: 16px;
+  color: var(--defaultTextColor);
+  line-height:1.6;
 }
 
 button {
@@ -14,5 +17,9 @@ button {
 }
 
 a {
-  color:var(--mainColor);
+  color:var(--linkColor);
+}
+
+a:hover {
+  opacity: 0.7;
 }
